# TrVD

./: .gitignore  README.md  evaluation.py  model.py  pipeline.py  pyproject.toml  train.py  tree.py
.claude/: CLAUDE.md  MEMORY.md
.claude/memory/: context7-usage.md
dataset/: cwe_labels.csv
docs/: TrVD.md
scripts/: evaluation.py  split_dataset.py  train.py
src/: clean_gadget.py  model.py  normalization.py  pipeline.py  prepare_data.py  tree.py
